terraform/modules/networking/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    "Name" = "delta-vpc-${var.environment}"
  }
}
